prod/deployment-productpage-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: productpage
    version: v2
  name: productpage-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: v2
  template:
    metadata:
      labels:
        app: productpage
        version: v2
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - image: de.icr.io/kmddk/bookinfo-productpage:
          imagePullPolicy: Always
          name: productpage-v2
          ports:
            - containerPort: 9080
              protocol: TCP
