prod/service-productpage-v2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: productpage
  name: productpage-v2
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    app: productpage
    version: v2
